--- a/.github/component_owners.yml
+++ b/.github/component_owners.yml
@@ -24,8 +24,6 @@ components:
   src/OpenTelemetry.Extensions.AzureMonitor/:
     - rajkumar-rangaraj
     - vishweshbankwar
-  src/OpenTelemetry.Extensions.Docker/:
-    - iskiselev
   src/OpenTelemetry.Extensions.PersistentStorage.Abstractions/:
     - vishweshbankwar
   src/OpenTelemetry.Extensions.PersistentStorage/:
@@ -57,6 +55,8 @@ components:
     - xiang17
   src/OpenTelemetry.Instrumentation.Wcf/:
     - codeblanch
+  src/OpenTelemetry.ResourceDetector.Container/:
+    - iskiselev
   test/OpenTelemetry.Contrib.Extensions.AWSXRay.Tests/:
     - srprash
     - lupengamzn
@@ -89,8 +89,6 @@ components:
     - SergeyKanzhelev
   test/OpenTelemetry.Extensions.Tests/:
     - codeblanch
-  test/OpenTelemetry.Extensions.Docker.Tests/:
-    - iskiselev
   test/OpenTelemetry.Extensions.PersistentStorage.Tests/:
     - vishweshbankwar
   test/OpenTelemetry.Instrumentation.AWSLambda.Tests/:
@@ -118,3 +116,5 @@ components:
     - xiang17
   test/OpenTelemetry.Instrumentation.Wcf.Tests/:
     - codeblanch
+  test/OpenTelemetry.ResourceDetector.Container.Tests/:
+    - iskiselev
