--- a/test/OpenTelemetry.ResourceDetector.Container.Tests/OpenTelemetry.ResourceDetector.Container.Tests.csproj
+++ b/test/OpenTelemetry.ResourceDetector.Container.Tests/OpenTelemetry.ResourceDetector.Container.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Description>Unit test project for Docker Detector for OpenTelemetry</Description>
+    <Description>Unit test project for Container Detector for OpenTelemetry</Description>
     <!-- OmniSharp/VS Code requires TargetFrameworks to be in descending order for IntelliSense and analysis. -->
     <TargetFrameworks>net7.0;net6.0;netcoreapp3.1</TargetFrameworks>
     <TargetFrameworks Condition="$(OS) == 'Windows_NT'">$(TargetFrameworks);net462</TargetFrameworks>
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="$(RepoRoot)\src\OpenTelemetry.Extensions.Docker\OpenTelemetry.Extensions.Docker.csproj" />
+    <ProjectReference Include="$(RepoRoot)\src\OpenTelemetry.ResourceDetector.Container\OpenTelemetry.ResourceDetector.Container.csproj" />
   </ItemGroup>
 
 </Project>
