[Exporter.Geneva] Add TLDTraceExporter (#662)

--- a/.editorconfig
+++ b/.editorconfig
@@ -144,6 +144,7 @@ dotnet_diagnostic.IDE0005.severity = warning
 csharp_style_namespace_declarations = file_scoped:warning
 
 [obj/**.cs]
+[**/External/**.cs]
 generated_code = true
 
 [*.csproj]
