Do not assign in drafts
Do not assign people to draft PRs.

--- a/.github/workflows/assign-reviewers.yml
+++ b/.github/workflows/assign-reviewers.yml
@@ -11,3 +11,5 @@ jobs:
     name: Assign Reviewers
     steps:
       - uses: dyladan/component-owners@main
+        with:
+          assign-owners: ${{ github.event.pull_request.draft == false }}
