[Instrumentation.Quartz] Test with modern frameworks Drop netcoreapp3.1 as it is not longer supported

--- a/test/OpenTelemetry.Instrumentation.Quartz.Tests/OpenTelemetry.Instrumentation.Quartz.Tests.csproj
+++ b/test/OpenTelemetry.Instrumentation.Quartz.Tests/OpenTelemetry.Instrumentation.Quartz.Tests.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <Description>Unit test project for OpenTelemetry Quartz.NET instrumentation</Description>
-        <TargetFrameworks>net472;netcoreapp3.1</TargetFrameworks>
+        <TargetFrameworks>net7.0;net6.0;net472</TargetFrameworks>
         <IncludeSharedTestSource>true</IncludeSharedTestSource>
     </PropertyGroup>
 
