--- a/src/OpenTelemetry.Instrumentation.MySqlData/OpenTelemetry.Instrumentation.MySqlData.csproj
+++ b/src/OpenTelemetry.Instrumentation.MySqlData/OpenTelemetry.Instrumentation.MySqlData.csproj
@@ -5,6 +5,7 @@
         <Description>OpenTelemetry instrumentation for MySql.Data</Description>
         <PackageTags>$(PackageTags);distributed-tracing;MySql.Data</PackageTags>
         <MinVerTagPrefix>Instrumentation.MySqlData-</MinVerTagPrefix>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
