--- a/src/OpenTelemetry.Instrumentation.Quartz/OpenTelemetry.Instrumentation.Quartz.csproj
+++ b/src/OpenTelemetry.Instrumentation.Quartz/OpenTelemetry.Instrumentation.Quartz.csproj
@@ -7,6 +7,7 @@
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <AssemblyName>OpenTelemetry.Instrumentation.Quartz</AssemblyName>
     <RootNamespace>OpenTelemetry.Instrumentation.Quartz</RootNamespace>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="OpenTelemetry.Api" Version="$(OpenTelemetryCoreLatestVersion)" />
