--- a/test/OpenTelemetry.Instrumentation.Quartz.Tests/OpenTelemetry.Instrumentation.Quartz.Tests.csproj
+++ b/test/OpenTelemetry.Instrumentation.Quartz.Tests/OpenTelemetry.Instrumentation.Quartz.Tests.csproj
@@ -4,6 +4,7 @@
         <Description>Unit test project for OpenTelemetry Quartz.NET instrumentation</Description>
         <TargetFrameworks>net7.0;net6.0;net472</TargetFrameworks>
         <IncludeSharedTestSource>true</IncludeSharedTestSource>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
