--- a/.github/workflows/package-Instrumentation.Process.yml
+++ b/.github/workflows/package-Instrumentation.Process.yml
@@ -14,6 +14,8 @@ on:
 jobs:
   build-test-pack:
     runs-on: ${{ matrix.os }}
+    permissions:
+      contents: write
     env:
       PROJECT: OpenTelemetry.Instrumentation.Process
 
@@ -51,3 +53,8 @@ jobs:
     - name: Publish Nuget
       run: |
         nuget push **/${{env.PROJECT}}/bin/**/*.nupkg -Source https://api.nuget.org/v3/index.json -ApiKey ${{ secrets.NUGET_TOKEN }} -SymbolApiKey ${{ secrets.NUGET_TOKEN }}
+
+    - name: Create GitHub Release
+      run: gh release create ${{ github.ref_name }} --title ${{ github.ref_name }} --verify-tag --draft
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
