Add comp extensions entry, component owners, yml files, readme

--- a/.github/component_owners.yml
+++ b/.github/component_owners.yml
@@ -26,6 +26,10 @@ components:
     - vishweshbankwar
   src/OpenTelemetry.Extensions.Docker/:
     - iskiselev
+  src/OpenTelemetry.Extensions.Enrichment/:
+    - evgenyfedorov2
+  src/OpenTelemetry.Extensions.Enrichment.AspNetCore/:
+    - evgenyfedorov2
   src/OpenTelemetry.Extensions.PersistentStorage.Abstractions/:
     - vishweshbankwar
   src/OpenTelemetry.Extensions.PersistentStorage/:
