resolve pr comments

--- a/.github/component_owners.yml
+++ b/.github/component_owners.yml
@@ -55,6 +55,9 @@ components:
     - xiang17
   src/OpenTelemetry.Instrumentation.Wcf/:
     - codeblanch
+  src/OpenTelemetry.ResourceDetectors.Azure/:
+    - rajkumar-rangaraj
+    - vishweshbankwar
   test/OpenTelemetry.Contrib.Extensions.AWSXRay.Tests/:
     - srprash
     - lupengamzn
