--- a/.github/component_owners.yml
+++ b/.github/component_owners.yml
@@ -117,3 +117,6 @@ components:
     - xiang17
   test/OpenTelemetry.Instrumentation.Wcf.Tests/:
     - codeblanch
+  test/OpenTelemetry.ResourceDetectors.Azure.Tests/:
+    - rajkumar-rangaraj
+    - vishweshbankwar
