--- a/.github/workflows/ci-Instrumentation.Process.yml
+++ b/.github/workflows/ci-Instrumentation.Process.yml
@@ -1,14 +1,18 @@
 name: Build
 
 on:
-  push:
-    branches: [ 'main*', 'instrumentation*', 'exporter*', 'extensions*' ]
-    paths-ignore:
-    - '**.md'
   pull_request:
-    branches: [ 'main*', 'instrumentation*', 'exporter*', 'extensions*' ]
-    paths-ignore:
-    - '**.md'
+    branches: [ 'main*', 'instrumentation*' ]
+    paths:
+    - '.github/**'
+    - 'build/**'
+    - 'src/OpenTelemetry.Instrumentation.Process.Tests/**'
+    - 'src/OpenTelemetry.Internal/**'
+    - 'src/Directory.Build.props'
+    - 'src/Directory.Build.targets'
+    - 'test/OpenTelemetry.Instrumentation.Process.Tests/**'
+    - 'global.json'
+    - 'NuGet.config'
 
 jobs:
   build-test:
@@ -36,11 +40,9 @@ jobs:
       with:
         dotnet-version: '7.0.x'
 
-    - name: Install dependencies
-      run: dotnet restore
-
     - name: Build
-      run: dotnet build --configuration Release --no-restore
+      run: dotnet build --configuration Release test/OpenTelemetry.Instrumentation.Process.Tests/OpenTelemetry.Instrumentation.Process.Tests.csproj
 
     - name: Test ${{ matrix.version }}
-      run: dotnet test **/bin/**/${{ matrix.version }}/*.Tests.dll --logger:"console;verbosity=detailed"
+      run: dotnet test test/OpenTelemetry.Instrumentatio
+  n.Process.Tests/bin/Release/${{ matrix.version }}/OpenTelemetry.Instrumentation.Process.Tests.dll --logger:"console;verbosity=detailed"
