--- a/.github/workflows/ci-Instrumentation.Process.yml
+++ b/.github/workflows/ci-Instrumentation.Process.yml
@@ -7,6 +7,9 @@ on:
     - 'src/OpenTelemetry.Instrumentation.Process/**'
     - 'test/OpenTelemetry.Instrumentation.Process.Tests/**'
 
+env:
+  COMPONENT_NAME: OpenTelemetry.Instrumentation.Process
+
 jobs:
   unit-test:
     strategy:
@@ -29,7 +32,7 @@ jobs:
         dotnet-version: '7.0.x'
 
     - name: Build
-      run: dotnet build --configuration Release test/OpenTelemetry.Instrumentation.Process.Tests/OpenTelemetry.Instrumentation.Process.Tests.csproj
+      run: dotnet build --configuration Release test/${{ env.COMPONENT_NAME }}.Tests/${{ env.COMPONENT_NAME }}.Tests.csproj
 
     - name: Test
-      run: dotnet test test/OpenTelemetry.Instrumentation.Process.Tests/bin/Release/**/OpenTelemetry.Instrumentation.Process.Tests.dll --logger:"console;verbosity=detailed"
+      run: dotnet test test/${{ env.COMPONENT_NAME }}.Tests/bin/Release/**/${{ env.COMPONENT_NAME }}.Tests.dll --logger:"console;verbosity=detailed"
