--- a/.github/workflows/ci-Instrumentation.Process.yml
+++ b/.github/workflows/ci-Instrumentation.Process.yml
@@ -1,4 +1,4 @@
-name: OpenTelemetry.Instrumentation.Process
+name: Instrumentation.Process
 
 on:
   pull_request:
@@ -7,17 +7,15 @@ on:
     - 'src/OpenTelemetry.Instrumentation.Process/**'
     - 'test/OpenTelemetry.Instrumentation.Process.Tests/**'
 
-jobs:
-  build-test:
+env:
+  COMPONENT_NAME: OpenTelemetry.Instrumentation.Process
 
+jobs:
+  unit-test:
     strategy:
       fail-fast: false # ensures the entire test matrix is run, even if one permutation fails
       matrix:
-        os: [ windows-latest, ubuntu-latest ]
-        version: [ net462, netcoreapp3.1, net6.0, net7.0 ]
-        exclude:
-        - os: ubuntu-latest
-          version: net462
+        os: [ ubuntu-latest, windows-latest ]
 
     runs-on: ${{ matrix.os }}
     steps:
@@ -34,8 +32,7 @@ jobs:
         dotnet-version: '7.0.x'
 
     - name: Build
-      run: dotnet build --configuration Release test/OpenTelemetry.Instrumentation.Process.Tests/OpenTelemetry.Instrumentation.Process.Tests.csproj
+      run: dotnet build --configuration Release test/${{ env.COMPONENT_NAME }}.Tests/${{ env.COMPONENT_NAME }}.Tests.csproj
 
-    - name: Test ${{ matrix.version }}
-      run: dotnet test test/OpenTelemetry.Instrumentatio
-  n.Process.Tests/bin/Release/${{ matrix.version }}/OpenTelemetry.Instrumentation.Process.Tests.dll --logger:"console;verbosity=detailed"
+    - name: Test
+      run: dotnet test test/${{ env.COMPONENT_NAME }}.Tests/bin/Release/**/${{ env.COMPONENT_NAME }}.Tests.dll --logger:"console;verbosity=detailed"
