[OneCollectorExporter] Initial code (#1003)
* Initial push.

* Solution and props updates.

* Clean up and refactoring.

* A bit of MD content.

* Warnings and public API.

* Package description tweak.

* Test refactoring.

* More README content.

* Tests and fixes.

* GitHub ceremony.

* Add HttpJsonPostTransport tests.

* Owners update.

* Code review.

* Fixes for dotnet format.

* Warning cleanup.

* Test fixes.

* Test clean up.

--- a/.github/component_owners.yml
+++ b/.github/component_owners.yml
@@ -17,6 +17,9 @@ components:
     - Yun-Ting
   src/OpenTelemetry.Exporter.Instana/:
     - zivaninstana
+  src/OpenTelemetry.Exporter.OneCollector/:
+    - codeblanch
+    - reyang
   src/OpenTelemetry.Exporter.Stackdriver/:
     - SergeyKanzhelev
   src/OpenTelemetry.Extensions/:
@@ -86,6 +89,9 @@ components:
     - Yun-Ting
   test/OpenTelemetry.Exporter.Instana.Tests/:
     - zivaninstana
+  test/OpenTelemetry.Exporter.OneCollector.Tests/:
+    - codeblanch
+    - reyang
   test/OpenTelemetry.Exporter.Stackdriver.Tests/:
     - SergeyKanzhelev
   test/OpenTelemetry.Extensions.Tests/:
