resort component owners

--- a/.github/component_owners.yml
+++ b/.github/component_owners.yml
@@ -8,8 +8,6 @@ components:
     - lupengamzn
   src/OpenTelemetry.Contrib.Instrumentation.AWS/:
     - srprash
-  src/OpenTelemetry.Contrib.Instrumentation.Cassandra/:
-    - xsoheilalizadeh
   src/OpenTelemetry.Exporter.Geneva/:
     - cijothomas
     - codeblanch
@@ -40,6 +38,8 @@ components:
   src/OpenTelemetry.Instrumentation.AWSLambda/:
     - rypdal
     - Oberon00
+  src/OpenTelemetry.Instrumentation.Cassandra/:
+    - xsoheilalizadeh
   src/OpenTelemetry.Instrumentation.ElasticsearchClient/:
     - ejsmith
   src/OpenTelemetry.Instrumentation.EventCounters/:
@@ -112,6 +112,8 @@ components:
   test/OpenTelemetry.Instrumentation.AWSLambda.Tests/:
     - rypdal
     - Oberon00
+  test/OpenTelemetry.Instrumentation.Cassandra.Tests/:
+    - xsoheilalizadeh
   test/OpenTelemetry.Instrumentation.ElasticsearchClient.Tests/:
     - ejsmith
   test/OpenTelemetry.Instrumentation.EventCounters.Tests/:
@@ -132,8 +134,6 @@ components:
     - xiang17
   test/OpenTelemetry.Instrumentation.Wcf.Tests/:
     - codeblanch
-  test/OpenTelemetry.Contrib.Instrumentation.Cassandra.Tests/:
-    - xsoheilalizadeh
   test/OpenTelemetry.ResourceDetectors.Azure.Tests/:
     - rajkumar-rangaraj
     - vishweshbankwar
