--- a/src/OpenTelemetry.Extensions.Docker/OpenTelemetry.Extensions.Docker.csproj
+++ b/src/OpenTelemetry.Extensions.Docker/OpenTelemetry.Extensions.Docker.csproj
@@ -4,6 +4,7 @@
     <TargetFrameworks>netstandard2.0;net462</TargetFrameworks>
     <Description>OpenTelemetry Extensions - Container Resource Detector from Docker environment.</Description>
     <MinVerTagPrefix>Extensions.Docker-</MinVerTagPrefix>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="OpenTelemetry" Version="$(OpenTelemetryCoreLatestVersion)" />
